--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <td>⭐⭐⭐⭐⭐</td>
                 </tr>
                 <tr>
-                  <td>Guitar</td>
+                  <td>Acoustic Guitar</td>
                   <td>⭐⭐⭐⭐</td>
                 </tr>
                 <tr>
