added new eduation

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
       <tbody>
         <!--Table body-->
         <tr>
+          <td>2021-now</td>
+          <td>NTU SCSE</td>
+        
+        </tr>
+        <tr>
           <!--Table row-->
           <td>2017-2018</td>
           <!--Table data-->
