--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>🏀Matt's Personal Site🏀</title>
+    <title>🏀Matt's Personal Site🏀</title> 
+    <link rel="stylesheet" href = "css/styles.css"> <!--link sheet the css page which would apply all the properties in the css page into the html website-->
+
+  
   </head>
 
   <body>
-    <table cellspacing="20">
+    <table cellspacing="20"> 
       <tr>
         <td>
           <img
-            src="flareonmatt_resized(1)-modified.png"
+            src="flareonmatt_resized(1)-modified.png"     
             alt="Matthias Profile Picture"
           />
         </td>
@@ -31,9 +34,13 @@
           </p>
         </td>
       </tr>
-    </table>
+    </table>   <!--formatting of the heading-->
     <hr />
-
+    <h3> Experience</h3>
+    <ul>
+      <li>SAF</li>
+    </ul>
+    <hr>
     <h3>Education</h3>
     <ul>
       <li>NTU SCSE</li>
@@ -46,7 +53,7 @@
         <!--Table head-->
         <tr>
           <th>
-            <!--Table header cellelement-->
+            <!--Table header cell element-->
             Dates
           </th>
           <th>School</th>
@@ -57,7 +64,6 @@
         <tr>
           <td>2021-now</td>
           <td>NTU SCSE</td>
-        
         </tr>
         <tr>
           <!--Table row-->
@@ -73,15 +79,11 @@
       <tfoot></tfoot>
     </table>
 
-
-
-<hr>
-
-
+    <hr />
 
     <h3>Skills</h3>
 
-    <table border="1" cellspacing = "10">
+    <table border="1" cellspacing="10">
       <thead>
         <tr>
           <th>CS-RELATED</th>
@@ -89,42 +91,41 @@
         </tr>
       </thead>
       <tbody>
-          <tr>
-            <td>
-              <table >
-                <tr>
-                  <td>Python</td>
-                  <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                  <td>Java</td>
-                  <td>⭐⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                  <td>C</td>
-                  <td>⭐⭐⭐</td>
-                </tr>
-              </table>
-            </td>
+        <tr>
+          <td>
+            <table>
+              <tr>
+                <td>Python</td>
+                <td>⭐⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td>Java</td>
+                <td>⭐⭐⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td>C</td>
+                <td>⭐⭐⭐</td>
+              </tr>
+            </table>
+          </td>
 
-            <td>
-              <table >
-                <tr>
-                  <td>Piano</td>
-                  <td>⭐⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                  <td>Acoustic Guitar</td>
-                  <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                  <td>Basketball</td>
-                  <td>⭐⭐⭐</td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        
+          <td>
+            <table>
+              <tr>
+                <td>Piano</td>
+                <td>⭐⭐⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td>Acoustic Guitar</td>
+                <td>⭐⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td>Basketball</td>
+                <td>⭐⭐⭐</td>
+              </tr>
+            </table>
+          </td>
+        </tr>
       </tbody>
       <tfoot>
         <!--Table foot-->
